--- a/analyse_exploratoire.ipynb
+++ b/analyse_exploratoire.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analyse exploratoire \n",
-    "## Human recognition activity\n",
+    "# Human recognition activity \n",
+    "## Analyse exploratoire\n",
     "\n",
     "### Introduction\n",
     "### Ouverture des données"
