--- a/analyse_exploratoire.ipynb
+++ b/analyse_exploratoire.ipynb
@@ -4,16 +4,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Human recognition activity \n",
+    "<img src=\"http://www.institut-clement-ader.org/fichiers/logos/logo_insa.png\" width=\"250\"/>\n",
+    "\n",
+    "<p style=\"text-align:center\"; ><font size=\"6\"> Human recognition activity </font> </p>\n",
+    "<p style=\"text-align:center\"; ><font size=\"3\"> Eva Marques et Soizick Magon de La Giclais </font> </p>\n",
+    "\n",
     "## Analyse exploratoire\n",
     "\n",
-    "### Introduction\n",
+    "### Introduction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Graphiques dans la fenêtre\n",
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Ouverture des données"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -22,19 +46,6 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -88,24 +99,16 @@
        "5      6              LAYING"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Graphiques dans la fenêtre\n",
-    "%matplotlib inline\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import time\n",
-    "\n",
-    "\n",
     "# Lecture des données\n",
     "# Charger les données ou les lire directement en précisant le chemin\n",
-    "#path=\"~/Documents/5AGMM/UCI HAR Dataset/\"  # path sur l'ordi de Soizick\n",
-    "path=\"~/Documents/Projet_Human_Recog_Activity/UCI HAR Dataset/\"  # path sur l'ordi d'Eva\n",
+    "path=\"~/Documents/5AGMM/UCI HAR Dataset/\"  # path sur l'ordi de Soizick\n",
+    "#path=\"~/Documents/Projet_Human_Recog_Activity/UCI HAR Dataset/\"  # path sur l'ordi d'Eva\n",
     "\n",
     "activity_labels=pd.read_csv(path+\"activity_labels.txt\",sep=\" \", names = np.array([\"label\",\"denomination\"]),header=None)\n",
     "features=pd.read_csv(path+\"features.txt\",sep=\" \",names = np.array([\"label\",\"denomination\"]), header=None)\n",
@@ -116,26 +119,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -349,7 +339,7 @@
        "[5 rows x 561 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,31 +347,19 @@
    "source": [
     "# Lecture des données d'apprentissage\n",
     "Xtrain=pd.read_table(path+\"train/X_train.txt\",names =features[\"denomination\"],sep='\\s+',header=None)\n",
-    "Xtrain.head()"
+    "Xtrain.head()\n",
+    "#Xtrain.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -595,7 +573,7 @@
        "[5 rows x 561 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,26 +586,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -669,7 +634,7 @@
        "4      5"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,10 +660,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.decomposition import PCA\n",
@@ -708,9 +671,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:py27]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "conda-env-py27-py"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -722,7 +685,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
