--- a/Atelier-HAR-Inertial_data_Keras.ipynb
+++ b/Atelier-HAR-Inertial_data_Keras.ipynb
@@ -77,31 +77,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "hide_input": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\python27\\lib\\site-packages\\IPython\\kernel\\__init__.py:13: ShimWarning: The `IPython.kernel` package has been deprecated since IPython 4.0.You should import from ipykernel or jupyter_client instead.\n",
-      "  \"You should import from ipykernel or jupyter_client instead.\", ShimWarning)\n"
-     ]
-    },
-    {
-     "ename": "ImportError",
-     "evalue": "No module named seaborn",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-47b22fea5183>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmagic\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mu'matplotlib notebook'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mseaborn\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0msb\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m \u001b[0msb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mImportError\u001b[0m: No module named seaborn"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -114,6 +94,13 @@
     "#Utils Sklearn\n",
     "import sklearn.linear_model as lm\n",
     "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.svm import SVC, LinearSVC\n",
+    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis, QuadraticDiscriminantAnalysis\n",
+    "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier, GradientBoostingClassifier\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
     "\n",
     "%matplotlib notebook\n",
     "import matplotlib.pyplot as plt\n",
@@ -169,18 +156,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-2-4df3c6bad598>, line 9)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-2-4df3c6bad598>\"\u001b[1;36m, line \u001b[1;32m9\u001b[0m\n\u001b[1;33m    filename = f'{data_dir}/{subset}/Inertial Signals/{signal}_{subset}.txt'\u001b[0m\n\u001b[1;37m                                                                           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "DATADIR_UCI = '~/DeepLearning/data/HARWS//UCI HAR Dataset'\n",
+    "DATADIR_UCI = './../data_har'\n",
     "\n",
     "SIGNALS = [ \"body_acc_x\", \"body_acc_y\", \"body_acc_z\", \"body_gyro_x\", \"body_gyro_y\", \"body_gyro_z\", \"total_acc_x\", \"total_acc_y\", \"total_acc_z\"]\n",
     "\n",
@@ -230,19 +208,7 @@
    "metadata": {
     "hide_input": false
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'load_signals' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-e69d927ddef6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#Multidimensional Data\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_test\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mload_signals\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mDATADIR_UCI\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'train'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mload_signals\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mDATADIR_UCI\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'test'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;31m# Flattened Data\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mX_train_flatten\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_test_flatten\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mload_signals\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mDATADIR_UCI\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'train'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mflatten\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mload_signals\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mDATADIR_UCI\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'test'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mflatten\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'load_signals' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Multidimensional Data\n",
     "X_train, X_test = load_signals(DATADIR_UCI, 'train'), load_signals(DATADIR_UCI, 'test')\n",
@@ -260,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -292,10 +258,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "DATA_DIR = \"/Users/bguillouet/Insa/DeepLearning/data/HARWS/\"\n",
@@ -335,38 +299,25 @@
    "source": [
     "### 3.1 Régression Logistique\n",
     "\n",
-    "La Régression Logistique est une des méthodes conduisant aux meilleurs résultats sur les vairables métier."
+    "La Régression Logistique est une des méthodes conduisant aux meilleurs résultats sur les variables métier."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LibLinear]Score With Logistic Regression on Inertial Signals = 57.45, Learning time = 33.21 secondes\n"
+      "[LibLinear]Score With Logistic Regression on Inertial Signals = 57.45, Learning time = 53.30 secondes\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -400,7 +351,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>WALKING DOWNSTAIRS</th>\n",
-       "      <td>93</td>\n",
+       "      <td>92</td>\n",
        "      <td>66</td>\n",
        "      <td>103</td>\n",
        "      <td>1</td>\n",
@@ -409,7 +360,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SITTING</th>\n",
-       "      <td>80</td>\n",
+       "      <td>79</td>\n",
        "      <td>32</td>\n",
        "      <td>58</td>\n",
        "      <td>397</td>\n",
@@ -418,7 +369,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>STANDING</th>\n",
-       "      <td>129</td>\n",
+       "      <td>131</td>\n",
        "      <td>92</td>\n",
        "      <td>106</td>\n",
        "      <td>70</td>\n",
@@ -442,9 +393,9 @@
        "                    WALKING  WALKING UPSTAIRS  WALKING DOWNSTAIRS  SITTING  \\\n",
        "WALKING                 120                63                  97        0   \n",
        "WALKING UPSTAIRS         74               218                  56       23   \n",
-       "WALKING DOWNSTAIRS       93                66                 103        1   \n",
-       "SITTING                  80                32                  58      397   \n",
-       "STANDING                129                92                 106       70   \n",
+       "WALKING DOWNSTAIRS       92                66                 103        1   \n",
+       "SITTING                  79                32                  58      397   \n",
+       "STANDING                131                92                 106       70   \n",
        "LAYING                    0                 0                   0        0   \n",
        "\n",
        "                    STANDING  LAYING  \n",
@@ -456,7 +407,7 @@
        "LAYING                     0     510  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,6 +423,49 @@
     "lr_prediction_label = model_lr.predict(X_test_flatten)\n",
     "metadata_svc = {\"time_learning\" : t_learning, \"score\" : score}\n",
     "pd.DataFrame(confusion_matrix(lr_prediction_label, Y_test_label), index = LABELS, columns=LABELS)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SVM linéaire"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts = time.time()\n",
+    "param=[{\"C\":[0.4,0.5,0.6,0.8,1,1.4]}]\n",
+    "method_LSVM = GridSearchCV(LinearSVC(),param,cv=10,n_jobs=-1)\n",
+    "method_LSVM=method_LSVM.fit(X_train_flatten,Y_train_label)\n",
+    "score = method_LSVM.score(X_test_flatten, Y_test_label)\n",
+    "ypred = method_LSVM.predict(X_test_flatten)\n",
+    "te = time.time()\n",
+    "t_total = te-ts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "method_LSVM.best_params_[\"C\"]\n",
+    "print(\"Meilleur score = %f, Meilleur paramètre = %s\" % (method_LSVM.best_score_,method_LSVM.best_params_))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Score : %f, time running : %d secondes\" %(score, t_total))\n",
+    "pd.DataFrame(confusion_matrix(Y_test_label, ypred), index = LABELS, columns=LABELS)"
    ]
   },
   {
@@ -1536,21 +1530,21 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.0"
   },
   "toc": {
    "nav_menu": {},
