--- a/Atelier-HAR-metier-python.ipynb
+++ b/Atelier-HAR-metier-python.ipynb
@@ -47,6 +47,34 @@
     }
    },
    "source": [
+    "# Synthèse des résultats obtenus\n",
+    "\n",
+    "Les différentes méthodes donnent des taux de bon classement allant de 0.90 à 0.96. Les temps de calculs sont très variables, et certaines méthodes ont plus de paramètres à optimiser que d'autres. Les acp et afd montrent qu'en général il est facile de discriminer deux types d'activités : les activités passives et actives. A l'intérieur de ces classes, la discrimination est moins évidente, notamment entre les activités `walking` et `walking` `upstairs` et entre `sitting` et `standing`. \n",
+    "\n",
+    "\n",
+    "Nous avons remarqué que les méthodes linéaires telles que la régression logistique polytomique ou la SVM linéaire obtiennent de très bon résultats en des temps de calculs inférieurs à 10 secondes :\n",
+    "- **Régression logistique polytomique** : `Score : 0.961995, time running : 3 secondes`\n",
+    "- **SVM linéaire** : `Score : 0.965728, time running : 3 secondes`  \n",
+    "\n",
+    "Les méthodes non linéaires telles que RandomForest, SVM avec noyau gaussien, K-plus proches voisins ne donnent pas de résultats satisfaisants intra-classes passives et actives. La validation croisée qui permet d'arriver à ces résultats est de plus particulièrement longue.\n",
+    "- **RandomForest** : `Score : 0.930777, time running : 103 secondes`\n",
+    "- **SVM avec noyau gaussien** : `Score : 0.946386, time running : 451 secondes`\n",
+    "- **K-plus proches voisins ** : `Score : 0.903631, time running : 527 secondes`\n",
+    "\n",
+    "En ce qui concerne les méthodes de boosting, ce sont des algorithmes couteux en temps qui possèdent de nombreux paramètres à optimiser et le résultat final après validation croisée ne vaut pas la longueur du temps de calcul. \n",
+    "- ** Gradient Boosting** : `Score : 0.942993, time running : 3851 secondes`\n",
+    "- ** XGBoost ** : `Score : 0.943332, time running : 979 secondes`\n",
+    "\n",
+    "Nous avons par ailleurs testé les réseaux de neurones (avec `sklearn` et `keras`). Même de simples perceptrons multicouches donnent déjà des résultats convenables en peu de temps.  Pour améliorer leur performance, il faudrait peut-être plus d'individus et plus d'imagination pour la création de nouvelles couches.\n",
+    "\n",
+    "Enfin, nous avons testé la combinaison de modèles. La première étape qui consiste à séparer les classes actives et passives est totalement efficace : on obtient 100% de bien classés sur l'échantillon test.\n",
+    "\n",
+    "La seconde étape s'attache à discriminer les activités à l'intérieur de ces deux classes. On obtient de très bons résultats à priori pour la classe active (près de 0.97), mais en réalité la SVM appliquée sur les données complètes discriminait mieux `walking` et `walking` `upstairs`.   \n",
+    "Parallèlement, le problème de séparation des classes `sitting` et `standing` n'est pas vraiment résolu pour les activités passives.    \n",
+    "\n",
+    "Il reste encore une grande marge de manoeuvre pour arriver à discriminer ces classes, par exemple en combinant d'autres méthodes. Cependant, d'après l'expérience précédente, les méthodes linéaires semblent être plus efficaces. \n",
+    "\n",
+    "\n",
     "## 1 Introduction\n",
     "### 1.1 Contexte\n",
     "Les données sont issues de la communauté qui vise la reconnaissance d'activités humaines (*Human activity recognition, HAR*) à partir d’enregistrements, par exemple du gyroscope et de l'accéléromètre d'un smartphone, objet connecté précurseur et dont la fonctionnalité de téléphonie devient très secondaire.\n",
@@ -87,13 +115,7 @@
     "Cette première étape s'intéresse aux seules variables construites à partir des connaissances *a priori* du comportement des capteurs en fonction des types d'activité humaine. Ce premier calepin propose une exploration et une modélisation, sans effort d'optimisation (paramètres par défaut), des 561 variables métier. Quelle méthode ou algorihtme d'apprentissage permet de déterminer au mieux l'activité humaine? \n",
     "\n",
     "Une deuxième étape à venir s'intéresse aux données brutes. Est-il possible d'économiser le travail préliminaire de définition des variables métier en utilisant par exemple les ressources de décompositions systématiques sur une base d'ondelette ou un algorihtme d'apprentissage profond?\n",
-    "\n",
-    "### 1.3 Résumé du travail effectué et des résultats obtenus\n",
-    "Les différentes méthode donnent des taux de bon classement allant de 0.90 à 0.96. Les temps de calculs sont très variables, et certaines méthodes ont plus de paramètres à optimiser que d'autres. Nous avons remarqué que les méthodes linéaires telles que la régression logistique polytomique ou la SVM linéaire obtiennent de très bon résultats en des temps de calculs inférieurs à 10 secondes :\n",
-    "- **Régression logistique polytomique** : Score : 0.961995, time running : 3 secondes\n",
-    "- **SVM linéaire** : Score : 0.965728, time running : 3 secondes  \n",
-    "\n",
-    "Nous avons par ailleurs testé l'algorithme XGBoost et des réseaux de neurones (avec `sklearn` et `keras`). Même de simples perceptrons multicouches donnent déjà des résultats convenables en peu de temps.  Pour améliorer leur performance, il faudrait peut-être plus d'individus et plus d'imagination pour la création de nouvelles couches."
+    "\n"
    ]
   },
   {
@@ -469,7 +491,9 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "label_dic = {1 : \"WALKING\",\n",
@@ -1007,7 +1031,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.svm import SVC, LinearSVC\n",
@@ -3683,7 +3709,9 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ts = time.time()\n",
@@ -3773,7 +3801,9 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ts = time.time()\n",
@@ -3871,7 +3901,9 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Xtr_actif = Xtrain.loc[np.where(ytrain<4)[0]]\n",
@@ -3888,7 +3920,9 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Xtr_actif=Xtr_actif.reset_index(drop=True)\n",
@@ -4124,19 +4158,6 @@
    "source": [
     "print(\"Score : %f, time running : %d secondes\" %(score, t_total))\n",
     "pd.DataFrame(confusion_matrix(ytest_passif, ypred), index = LABELS[3:6], columns=LABELS[3:6])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Conclusion de la combinaison de méthodes :**    \n",
-    "La première étape qui consiste à séparer les classes actives et passives est totalement efficace sur les données de test.   \n",
-    "\n",
-    "La seconde étape s'attache à discriminer les activités à l'intérieur de ces deux classes. On obtient de très bons résultats à priori pour la classe active (près de 0.97), mais en réalité la SVM appliquée sur les données complètes discriminait mieux `walking` et `walking upstairs`.   \n",
-    "Parallèlement, le problème de séparation des classes `sitting` et `standing` n'est pas vraiment résolu pour les activités passives.    \n",
-    "\n",
-    "Il reste encore une grande marge de manoeuvre pour arriver à discriminer ces classes, par exemple en combinant d'autres méthodes. Cependant, d'après l'expérience précédente, les méthodes linéaires semblent être plus efficaces. "
    ]
   }
  ],
