Suite du projet HAR sur données brutes

--- a/Atelier-HAR-Inertial_data_Keras.ipynb
+++ b/Atelier-HAR-Inertial_data_Keras.ipynb
@@ -209,6 +209,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
+    "collapsed": true,
     "hide_input": false
    },
    "outputs": [],
@@ -609,7 +610,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from xgboost import XGBClassifier\n",
@@ -646,6 +649,13 @@
     "La couche `Dropout` permet à chaque époque de supprimer aléatoirement 50% des neurones en entrée. Ceci permet d'éviter le surapprentissage.  \n",
     "\n",
     "La couche de sortie est composée de 6 neurones qui correspondent aux 6 activités. Comme chaque neurone doit avoir une sortie binaire (1 si l'activité du neurone correspond, 0 sinon), la fonction d'activation choisie est la fonction `softmax`. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A TESTER : essayer de normaliser les données "
    ]
   },
   {
