--- a/Atelier-HAR-Exploration_Inertial_data.ipynb
+++ b/Atelier-HAR-Exploration_Inertial_data.ipynb
@@ -168,7 +168,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Multidimensional Data\n",
